syntax = "proto3";

package obs_remote.outputs.v1;

service OutputsService {
  // Original: GetOutputList
  rpc List(ListRequest) returns (ListResponse);
  // Original: GetOutputStatus
  rpc Status(StatusRequest) returns (StatusResponse);
  // Original: ToggleOutput
  rpc Toggle(ToggleRequest) returns (ToggleResponse);
  // Original: StartOutput
  rpc Start(StartRequest) returns (StartResponse);
  // Original: StopOutput
  rpc Stop(StopRequest) returns (StopResponse);
  // Original: GetOutputSettings
  rpc Settings(SettingsRequest) returns (SettingsResponse);
  // Original: SetOutputSettings
  rpc SetSettings(SetSettingsRequest) returns (SetSettingsResponse);
}

message ListRequest {}

message ListResponse {}

message StatusRequest {}

message StatusResponse {}

message ToggleRequest {}

message ToggleResponse {}

message StartRequest {}

message StartResponse {}

message StopRequest {}

message StopResponse {}

message SettingsRequest {}

message SettingsResponse {}

message SetSettingsRequest {}

message SetSettingsResponse {}
